cmd/miningpool-gateway/k8s/02-miningpool-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miningpool-gateway
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: miningpool-gateway
  template:
    metadata:
      labels:
        app: miningpool-gateway
    spec:
      containers:
        - name: miningpool-gateway
          image: uhub.service.ucloud.cn/entropypool/miningpool-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/MiningpoolGateway
      volumes:
        - name: service-config
          configMap:
            name: miningpool-gateway-config
            items:
              - key: service-conf
                path: MiningpoolGateway.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miningpool-gateway
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50610
      targetPort: 50610
    - name: grpc
      port: 50611
      targetPort: 50611
    - name: healthz
      port: 50612
      targetPort: 50612
    - name: prometheus
      port: 50613
      targetPort: 50613
  selector:
    app: miningpool-gateway
