cmd/miningpool-gateway/k8s/04-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: miningpool-gateway-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: miningpool-gateway-traefik-app
    k8s.kuboard.cn/workload: miningpool-gateway-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-miningpool-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-langid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: "/api/miningpool/v1/admin/create/appminingpool"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/get/appminingpool"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/get/appminingpools"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/get/appminingpools"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/delete/appminingpool"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/create/miningpoolcoin"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/update/miningpoolcoin"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/get/miningpoolcoins"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/delete/miningpoolcoin"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/create/miningpoolfractionrule"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/update/miningpoolfractionrule"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/get/miningpoolfractionrules"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/delete/miningpoolfractionrule"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/create/goodminingpooluser"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/get/goodminingpoolusers"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/delete/goodminingpooluser"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/create/miningpool"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/update/miningpool"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/get/miningpools"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/delete/miningpool"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/create/rootminingpooluser"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/get/rootminingpoolusers"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/update/rootminingpooluser"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/admin/delete/rootminingpooluser"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
    - host: api.procyon.vip
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.procyon.npool.top
      http: *http_rules
    - host: api.cryptomore.npool.top
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.harbin-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.hk-cryptomore-production.npool.top
      http: *http_rules
    - host: api.cryptomore.io
      http: *http_rules
    - host: api.mimo.biz
      http: *http_rules
    - host: api.epool.tech
      http: *http_rules
    - host: api.xhash.ai
      http: *http_rules
    - host: api.tokyo-xhash-production.npool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: miningpool-gateway-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: miningpool-gateway-traefik-app-user
    k8s.kuboard.cn/workload: miningpool-gateway-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-oplog@kubernetescrd,
      kube-system-strip-miningpool-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-langid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: "/api/miningpool/v1/create/miningpoolfrationwithdraw"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/get/miningpoolfration"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/get/user/miningpoolfrations"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
          - path: "/api/miningpool/v1/get/orderminingpooluser"
            backend:
              serviceName: miningpool-gateway
              servicePort: 50860
    - host: api.procyon.vip
      http: *http_rules
    - host: api.lpsecretbase.com
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.procyon.xpool.top
      http: *http_rules
    - host: api.procyon.npool.top
      http: *http_rules
    - host: api.cryptomore.npool.top
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.harbin-testing.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.hk-cryptomore-production.npool.top
      http: *http_rules
    - host: api.cryptomore.io
      http: *http_rules
    - host: api.mimo.biz
      http: *http_rules
    - host: api.epool.tech
      http: *http_rules
    - host: api.xhash.ai
      http: *http_rules
    - host: api.tokyo-xhash-production.npool.top
      http: *http_rules
